# tilelang

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_nvshmem.sh  filtered_commits.txt  install_cuda.sh  install_rocm.sh  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements-test-cuda.txt  requirements.txt  version_provider.py
.github/workflows/: ci.yml  dist.yml
benchmark/distributed/: README.md  benchmark_ag_gemm.py  benchmark_all_gather.py  benchmark_all_to_all.py  benchmark_reduce_scatter.py  utils.py
benchmark/matmul/: benchmark_matmul.py  benchmark_matmul_sp.py
docs/: index.md
docs/deeplearning_operators/: gemv.md
docs/get_started/: Installation.md
docs/programming_guides/: control_flow.md  instructions.md  python_compatibility.md
docs/tutorials/: debug_tools_for_tilelang.md
examples/: quickstart.py
examples/amd/: example_amd_flash_attn_bwd.py  example_amd_flash_attn_fwd.py
examples/attention_sink/: test_example_attention_sink.py
examples/autodd/: tilelang_buggy.py  tilelang_minimized_expected.py
examples/blocksparse_attention/: example_tilelang_sparse_gqa_decode_paged.py  example_tilelang_sparse_gqa_decode_varlen_indice.py  example_tilelang_sparse_gqa_decode_varlen_mask.py
examples/blocksparse_gemm/: example_blocksparse_gemm.py
examples/convolution/: example_convolution.py  example_convolution_autotune.py
examples/deepseek_deepgemm/: example_deepgemm_fp8_2xAcc.py
examples/deepseek_mhc/: example_mhc_post.py  example_mhc_pre.py
examples/deepseek_mla/: benchmark_mla.py  example_mla_decode.py  example_mla_decode_persistent.py
examples/deepseek_v32/: sparse_mla_fwd.py  sparse_mla_fwd_seesaw.py  topk_selector.py
examples/dequantize_gemm/: example_dequant_gemm_bf16_fp4_hopper.py  example_dequant_gemm_bf16_fp4_hopper_serial.py  example_dequant_gemm_bf16_mxfp4_hopper.py  example_dequant_gemm_bf16_mxfp4_hopper_tma.py  example_dequant_gemm_fine_grained.py  example_dequant_gemm_mxfp4_hopper.py  example_dequant_gemm_mxfp4_hopper_serial.py  example_dequant_gemv_fp16xint4.py  example_dequant_groupedgemm_bf16_mxfp4_hopper.py  test_example_dequantize_gemm.py  tilelang_jit_kernel_kernel_func_backup.c  utils.py
examples/distributed/: README.md  example_all_to_all.py  example_allgather.py  example_allgather_gemm.py  example_cannon.py  example_gemm_rs.py  example_nvshmem.py  example_simple_shift.py  example_summa.py  gemm_rs_kernel.py  gemm_rs_utils.py
examples/dsa_sparse_finetune/: sparse_mla_bwd.py
examples/eager_jit/: eagerjit.en.ipynb  eagerjit.zh.ipynb
examples/elementwise/: example_elementwise_add.py  example_elementwise_add_tma_1d.py  test_example_elementwise.py
examples/flash_attention/: example_gqa_bwd_tma_reduce.py  example_gqa_bwd_tma_reduce_varlen.py  example_mha_bwd.py
examples/flash_decoding/: example_gqa_decode.py  example_gqa_decode_varlen_logits.py  example_gqa_decode_varlen_logits_paged.py  mi_attn_score.py  test_example_flash_decoding.py
examples/fusedmoe/: example_fusedmoe_tilelang.py
examples/gdn/: README.md  example_chunk_delta_bwd.py  example_chunk_delta_h.py  example_chunk_o_bwd.py  example_wy_fast_bwd_split.py  profile.py  profile_triton.py
examples/gemm/: example_gemm_autotune.py  example_gemm_intrinsics.py
examples/gemm_fp8/: example_tilelang_gemm_amd_fp8_preshuffle.py  example_tilelang_gemm_fp8.py  example_tilelang_gemm_fp8_2xAcc.py  example_tilelang_gemm_fp8_intrinsic.py  example_tilelang_gemm_fp8_sm100.py
examples/gemm_sm100/: gemm_mxfp8_blockscaled_1d1d.py  gemm_tcgen5mma.py  gemm_tcgen5mma_ws.py  gemm_tcgen5mma_ws_persistent.py
examples/gemm_sp/: example_custom_compress.py  example_gemm_sp.py
examples/gemv/: example_gemv.py
examples/kda/: chunk_bwd_intra.py  chunk_o.py  wy_fast_bwd.py
examples/lazy_jit/: lazyjit.en.ipynb  lazyjit.zh.ipynb
examples/minference/: example_vertical_slash_sparse_attn.py
examples/plot_layout/: layout_swizzle.py
examples/sparse_tensorcore/: test_example_sparse_tensorcore.py  tilelang_example_sparse_tensorcore.py
examples/warp_specialize/: example_warp_specialize_flashmla.py  example_warp_specialize_gemm_barrierpipe_stage2.py  example_warp_specialize_gemm_copy_0_gemm_1.py  example_warp_specialize_gemm_copy_1_gemm_0.py  example_warp_specialize_gemm_copy_gemm_0_1.py  example_warp_specialize_gemm_softpipe_stage2.py
maint/gemm_v2/: correctness_evaluation.py  correctness_evaluation_tcgen05.py
maint/scripts/: pytest_cuda_scheduler.py  run_local_ci_test.sh
src/: config.h  ir.cc
src/backend/cuda/: CMakeLists.txt
src/backend/rocm/: CMakeLists.txt
src/layout/: gemm_layouts.cc  layout.cc  layout.h  utils.cc  utils.h
src/op/: atomic_add.cc  atomic_add.h  atomic_reduce.cc  atomic_reduce.h  builtin.cc  builtin.h  bulk_copy.cc  copy.cc  copy.h  distributed.cc  distributed.h  elem.cc  elem.h  fill.cc  finalize_reducer.cc  finalize_reducer.h  gemm.cc  gemm.h  gemm_py.cc  gemm_py.h  gemm_sp.cc  gemm_sp.h  gemm_sp_py.cc  logical.cc  operator.cc  parallel.cc  parallel.h  reduce.cc  reduce.h  tcgen5_meta.h  utils.cc  utils.h
src/runtime/: logging.cc  runtime.cc
src/transform/: annotate_warp_group_reg_alloc.cc  arg_binder.cc  arg_binder.h  atomicadd_vectorize.cc  atomicadd_vectorize.h  eliminate_storage_sync_for_mbarrier.cc  inject_pipeline.cc  inject_ptx_async_copy.cc  inject_tma_barrier.cc  layout_inference.cc  legalize_safe_memory_access.cc  loop_partition.cc  loop_partition.h  loop_unswitching.cc  loop_vectorize.cc  loop_vectorize.h  lower_access_ptr.cc  lower_cpengine_intrin.cc  lower_hopper_intrin.cc  lower_ldg_stg.cc  lower_pdl.cc  lower_shared_barrier.cc  lower_tile_op.cc  merge_shared_memory_allocations.cc  multi_version_buffer_rewriter.cc  parallel_loop_layout_validator.h  pipeline_planning.cc  producer_consumer_ws.cc  simplify.cc  split_host_device.cc  storage_rewrite.cc  thread_storage_sync.cc  unroll_loop.cc  vectorize_loop.cc  verify_parallel_loop.cc  warp_specialized_rewriter.cc
testing/: conftest.py
tilelang/: __init__.py  _typing.py  autodd.py  dtypes.py  env.py  ir.py
tilelang/analysis/: ast_printer.py  (+1 more)
(+310 files in other folders)
